vertical alignment fix for welcome page avatar

--- a/src/sass/components/_navigator.scss
+++ b/src/sass/components/_navigator.scss
@@ -287,6 +287,7 @@ $pop-up-menu-cordova-padding: 10px;
     overflow: hidden;
     display: inline;
     margin-top: 7px;
+    margin-bottom: 7px;
     min-width: 24px;
     max-width: 34px;
     @include breakpoints(max mid-small) {
